[gd_scene load_steps=4 format=3 uid="uid://crkll8afh5da"]

[ext_resource type="Script" path="res://addons/input_recorder/input_recorder.gd" id="1_1iam4"]
[ext_resource type="PackedScene" uid="uid://ckdfn586m8gou" path="res://addons/input_recorder/recordings_tree.tscn" id="2_d0u1o"]
[ext_resource type="FontFile" uid="uid://bnh0lslf4yh87" path="res://addons/gut/fonts/CourierPrime-Regular.ttf" id="2_qdw5k"]

[node name="InputRecorder" type="ColorRect"]
offset_left = 12.0
offset_top = 14.0
offset_right = 351.0
offset_bottom = 479.0
color = Color(0.113049, 0.113049, 0.113049, 1)
script = ExtResource("1_1iam4")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Row1" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="Record" type="Button" parent="Layout/Row1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Record"

[node name="Stop" type="Button" parent="Layout/Row1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stop
"

[node name="PlayButtons" type="VBoxContainer" parent="Layout/Row1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Play" type="Button" parent="Layout/Row1/PlayButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Play"

[node name="PlayFast" type="Button" parent="Layout/Row1/PlayButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Play Fast"

[node name="Row2" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="RecordMouse" type="CheckBox" parent="Layout/Row2"]
layout_mode = 2
button_pressed = true
text = "Record Mouse"

[node name="WarpMouse" type="CheckBox" parent="Layout/Row2"]
layout_mode = 2
button_pressed = true
text = "Warp Mouse"

[node name="ProgressBar" type="ProgressBar" parent="Layout"]
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0

[node name="Row3" type="VBoxContainer" parent="Layout"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Layout/Row3"]
layout_mode = 2
size_flags_vertical = 3

[node name="Tree" parent="Layout/Row3/ScrollContainer" instance=ExtResource("2_d0u1o")]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Layout/Row3"]
layout_mode = 2

[node name="Load" type="Button" parent="Layout/Row3/Buttons"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Load"

[node name="Save" type="Button" parent="Layout/Row3/Buttons"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="SaveAs" type="Button" parent="Layout/Row3/Buttons"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Save As"

[node name="Output" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 380.0
offset_top = 122.0
offset_right = 992.0
offset_bottom = 502.0
color = Color(0.151276, 0.151276, 0.151276, 1)

[node name="Layout" type="VBoxContainer" parent="Output"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="Output/Layout"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 1

[node name="SenderOutput" type="TextEdit" parent="Output/Layout/TabContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qdw5k")
editable = false
autowrap_mode = 0

[node name="EventOutput" type="TextEdit" parent="Output/Layout/TabContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qdw5k")
editable = false
autowrap_mode = 0

[connection signal="pressed" from="Layout/Row1/Record" to="." method="_on_record_pressed"]
[connection signal="pressed" from="Layout/Row1/Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="Layout/Row1/PlayButtons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Layout/Row1/PlayButtons/PlayFast" to="." method="_on_play_fast_pressed"]
[connection signal="recorder_selected" from="Layout/Row3/ScrollContainer/Tree" to="." method="_on_tree_recorder_selected"]
[connection signal="pressed" from="Layout/Row3/Buttons/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Layout/Row3/Buttons/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Layout/Row3/Buttons/SaveAs" to="." method="_on_save_as_pressed"]
